# redwood-rt

./: .gitignore  CMakeLists.txt  Makefile.inc  README.md
accelerator/: CMakeLists.txt  README.md
accelerator/cpu/: CMakeLists.txt  Core.cpp  Makefile  Redwood.cpp  UsmAlloc.cpp
accelerator/cpu/kernels/: Barnes.cpp  Nn.cpp
accelerator/cpu2/: CMakeLists.txt  Makefile  Redwood.cpp
accelerator/cuda/: CMakeLists.txt  Core.cu  CudaUtils.cuh  Kernel.cu  Makefile  Reduction.cuh  Redwood.cu  UserKernels.cuh  Usm.cu  UsmAlloc.cu
accelerator/cuda/bh/: Functors.cuh
accelerator/cuda/kernels/: Bh.cu  Nn.cu
accelerator/cuda/nn/: Functors.cuh  Reductions.cuh
accelerator/cuda/tests/: Main.cu  Makefile
accelerator/duet/: Core.cpp  DuetConsts.hpp  Makefile  Usm.cpp
accelerator/duet/barnes/: BarnesReducer.cpp  BarnesReducer.hpp  Consts.hpp  Redwood.cpp
accelerator/sycl/: Consts.hpp  Core.cpp  Kernel.cpp  Makefile  Redwood.cpp  SyclUtils.hpp  Usm.cpp  UsmAlloc.cpp
accelerator/sycl/kernels/: Barnes.cpp  Nn.cpp
examples/: CMakeLists.example_template.txt  CMakeLists.txt  IndicesBuffer.hpp  KDTree.hpp  LeafNodeTable.hpp  LoadFile.hpp  Main.cpp  Makefile  NnBuffer.hpp  Utils.hpp  cxxopts.hpp
examples/barnes/: AppParams.hpp  CMakeLists.txt  DuetHandler.hpp  DuetReducer.hpp  Kernel.hpp  Main.cpp  Makefile  Octree.hpp  Reducer.hpp  ReducerHandler.hpp
examples/barnes copy/: Main.cpp  Makefile  Octree.hpp
examples/barnes_basline/: Main.cpp  Makefile
examples/barnes_pb/: Main.cpp  Octree.hpp  README.md  ReducerHandler.hpp
examples/barnes_thin/: IndexedOctree.hpp  Main.cpp  Makefile  ReducerHandler.hpp
examples/knn/: Executor.hpp  GlobalVars.hpp  KDTree.hpp  Kernel.hpp  KnnSet.hpp  Main.cpp  Makefile  README.md  ReducerHandler.hpp
examples/knn_old/: KnnSet.hpp
examples/knn_old/tests/: KnnSet  KnnSet.cpp  Makefile
examples/minimal-pk/: Main.cu  Makefile
examples/new_barnes_pb/: DuetReducer.hpp  Main.cpp  Octree.hpp  Reducer.hpp  ReducerHandler.hpp
examples/nn/: AppParams.hpp  CMakeLists.txt  DistanceMetrics.hpp  Executor.hpp  ExecutorManager.hpp  GlobalVars.hpp  HostKernelFunc.hpp  KDTree.hpp  KnnSet.hpp  Main.cpp  MainDebug.cpp  Makefile  NNExecutor.hpp  ReducerHandler.hpp  run.py
examples/nn copy/: AppParams.hpp  Main.cpp  ReducerHandler.hpp
examples/nn-omp/: Executor.hpp  Main.cpp  ReducerHandler.hpp
examples/nn-omp/tests/: Makefile  Query.cpp
examples/nn/tests/: KnnSetTest.cpp  Makefile
examples/nn_pb/: Executor.hpp  KDTree.hpp  Main.cpp  ReducerHandler.hpp
examples/nn_pb/tests/: Makefile
examples/nn_thin/: Executor.hpp  KDTree.hpp  Main.cpp
examples/persistent_kernel/: CuUtils.hpp  Main.cu  Main2.cu  Makefile
examples/standalone/: DistanceMetrics.hpp  Executor.hpp  GlobalVars.hpp  LoadFile.hpp  Main.cpp  MainDebug.cpp  Makefile  ReducerHandler.hpp  nn.cpp
examples/standalone/Redwood/: Cpu.cpp  Cuda.cu  Redwood.hpp  UserKernels.cuh  Usm.hpp
examples/standalone/Redwood/cuda/: Core.cu  Distances.cuh  (+3 more)
examples/test/: Main.cpp  Makefile
examples/test-bh/: Main.cpp  Main2.cpp  Makefile
examples/tmp/: DuetHandler.hpp  Kernel.hpp  Main.cpp  Main.cu  Makefile
include/: PointCloud.hpp  Redwood.hpp  UsmAlloc.hpp
include/Functors/: DistanceMetrics.hpp
include/Redwood/: Constants.hpp  Core.hpp  DoubleBufferReducer.hpp  Kernel.hpp  Kernels.hpp  Macros.hpp  Reducer.hpp  Usm.hpp
include/Redwood/Duet/: Consts.hpp  DuetAPI.hpp
include/accelerator/: Core.hpp  Kernels.hpp  Usm.hpp
include/rt/: Runtime.hpp
microbench/: CpuReduction.cpp  CpuTraverse.cpp  DistanceMetrics.hpp  Makefile  Node.hpp  Point.hpp
redwood/: BhBuffer.hpp  Kernel.hpp  Makefile  NnBuffer.hpp  README.md  Redwood.cpp  RedwoodBh.cpp  RedwoodNn.cpp  SharedData.hpp
redwood/cuda/: Bh.cu  CudaUtils.cuh  Kernel.cu  KernelFunc.cuh  Makefile  Nn.cu  UsmAlloc.cu
redwood/sycl/: Barnes.cpp  Kernel.cpp  Makefile  Nn.cpp  SyclUtils.hpp  UsmAlloc.cpp
standalone/Redwood/: Kernel.hpp  Point.hpp
standalone/Redwood/cpu/: Cpu.cpp
standalone/Redwood/cuda/: Makefile
standalone/demo/nn/: KnnSet.hpp  MainDebug.cpp  ReducerHandler.hpp
test/: Main.cpp  Makefile
tests/test_traverser/: Advanced.cpp  Dependency.cpp  Makefile  Simple.cpp
tools/: README.md  cuda_check.py  cuda_mem_check.sh  data_gen.py  gen.py  gen_barnes.py  gen_kron.py  gen_nn.py  iris.py
(+2 files in other folders)
